--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ repositories {
 
 dependencies {
 	compile 'org.codehaus.groovy:groovy-all:2.3.3'
-	testCompile 'junit:junit:4.11'
+	testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
 }
 
 task wrapper(type:Wrapper) {
