--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ task wrapper(type:Wrapper) {
 }
 
 task interceptorjar(type: Jar) {
-	from files(sourceSets.main.output.classesDir)
+	from files(sourceSets.main.output.classesDir, sourceSets.main.resources)
 	from configurations.runtime.asFileTree.files.collect { zipTree(it) }
 
 	manifest {
