--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ repositories {
 dependencies {
 	compile 'org.codehaus.groovy:groovy-all:2.3.3'
 	testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
+	testCompile 'cglib:cglib-nodep:3.1'
 }
 
 task wrapper(type:Wrapper) {
